Adicionando a navbar com as aldeias

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Naruto</title>
 </head>
@@ -12,7 +13,10 @@
         <img src="./image/konoha-simbolo.png" alt="">     
     </header>
     <nav>
-        
+        <a href="">Areia</a>
+        <a href="">Nuvem</a>
+        <a href="">Raio</a>
+        <a href="">Nevoa</a>
     </nav>
     <section>
         
