Adicionando a foto da Aninha e ajustando as colunas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="">Nevoa</a>
     </nav>
     <section>
-        
+        <img src="./image/aninha-ninja.jpg" alt="">
     </section>
     <aside>
         
