--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <img src="./image/aninha-ninja.jpg" alt="">
     </section>
     <aside>
+        <p>
+            Ser ninja é uma experiência gratificante
+            e enriquecedora, poder participar da vida de tantas pessoas diferentes é algo incrível. Eu sou uma das pessoas que
+            quase desistiu da tecnologia por achar não ser capaz e ter a oportunidade de ser ninja me mostrou o contrário.
+            Quando fui pela primeira vez tive a certeza de que tinha algum conhecimento e era capaz de repassá-lo à outras
+            pessoas, isso fez com que voltasse a querer fazer algo tão nobre que é ensinar.
+            Ser ninja para mim é não deixar que as pessoas desistam, fazer com que elas acreditem no potencial que têm e mostrar
+            que estamos todos juntos, ninguém sabe 100% de tudo e está tudo bem, se precisar a gente corre atrás juntos. Como
+            diria o jovem Naruto: <span>"Esse é o meu jeito ninja de ser."</span>
+        </p>
         
     </aside>
     <footer>
